soft-serve/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: soft-serve
  namespace: soft-serve
spec:
  selector:
    app: soft-serve
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: ssh
      port: 23231
      targetPort: 23231
