soft-serve/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: soft-serve
  namespace: soft-serve
spec:
  hosts:
    - git.local.gwg313.xyz
  gateways:
    - soft-serve/soft-serve-gateway
  http:
    - route:
        - destination:
            host: soft-serve
            port:
              number: 80
